# LinuxNetworkMonitor

./: README.md
network_monitor/: Cargo.toml  data.csv  mystuff.txt
network_monitor/src/: email.rs  main.rs  packet_handler.rs
