[package]
name = "network_monitor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pcap = "1.3.0"
pnet = "0.34.0"

#for email
lettre = "0.11"

#for displaying time
chrono = "0.4.38"

csv = "1.3.0"
ctrlc = "3.4"